cambios de la imagen de perfil

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
  body {
    background: var(--bg);
-    overflow: hidden;
+    /* overflow: hidden; */
  }
 
  /* Estilos para el contenedor principal */
