--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -17,8 +17,9 @@
 }
 
 .Cabecera-h1 {
-    font-size: 50px;
-    margin-left: 20px;
+    align-items: center;
+    align-content: center;
+    margin-top: 10px;
 }
 
 .Cabecera-a {
@@ -43,7 +44,7 @@
     fill: red;
 }
 .Cabecera-svg .svg{
-    color: white
+    color: white;
 }
 
 .Cabecera-nav {
