--- a/src/Pages/Resumen/Resumen.css
+++ b/src/Pages/Resumen/Resumen.css
@@ -41,6 +41,7 @@ main.row {
     font-family: helvetica;
     color: var(--white);
     padding: 0px 0px 20px 30px;
+    height: 40px;
 }
 
 .col .contents {
