--- a/src/components/Text/Text.css
+++ b/src/components/Text/Text.css
@@ -1,7 +1,9 @@
 .container {
     width: 307px;
     height: 50px;
-    margin-top:0 ;
+    margin-top:0;
+    text-align: center;
+    align-content: center  ;
 }
 
 .content {
