--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -86,6 +86,10 @@
     .Cabecera-nav.isActive {
         height: 100vh;
         opacity: 1;
+        z-index: 300;
+    }
+    .Cabecera-button .isActive svg{
+        fill: red;
     }
 
     .Cabecera-ul {
@@ -95,4 +99,7 @@
     .Cabecera-li {
         margin: 0.5em 0;
     }
+}
+.Cabecera-button.isActive svg {
+    fill: #fff; /* Cambia el color del icono cuando el menú está activo */
 }
