terminado la parte del perfil

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
 
  /* Estilos para el contenedor principal */
  .App {
+  /* gap: 30px}; */
    text-align: center;
    position: relative;
    display: grid;
